[gd_scene load_steps=8 format=3 uid="uid://c1j6xn8dx5df5"]

[ext_resource type="Script" path="res://Turret/turret.gd" id="1_o5uq5"]
[ext_resource type="PackedScene" uid="uid://dgc36bgrllmkk" path="res://Turret/projectile.tscn" id="1_uql6f"]
[ext_resource type="PackedScene" uid="uid://b7ndx2sgfmju0" path="res://Assets/Cannon.glb" id="3_20y1j"]
[ext_resource type="PackedScene" uid="uid://dq3jjixh3vsoe" path="res://Assets/TurretBase.glb" id="4_ha2hb"]

[sub_resource type="Animation" id="Animation_qi6ku"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TurretBase/TurretTop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.3, 0)]
}

[sub_resource type="Animation" id="Animation_o3g1d"]
resource_name = "fire"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TurretBase/TurretTop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.3, -0.6), Vector3(0, 0.3, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yebcv"]
_data = {
"RESET": SubResource("Animation_qi6ku"),
"fire": SubResource("Animation_o3g1d")
}

[node name="Turret" type="Node3D"]
script = ExtResource("1_o5uq5")
projectile = ExtResource("1_uql6f")

[node name="TurretBase" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="TurretTop" type="Node3D" parent="TurretBase"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)

[node name="Cannon" parent="TurretBase/TurretTop" instance=ExtResource("3_20y1j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yebcv")
}

[node name="TurretBase2" parent="." instance=ExtResource("4_ha2hb")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
